--- a/index.html
+++ b/index.html
@@ -1,66 +1,4 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-html, body, canvas {
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-#info {
-    position: absolute;
-    bottom: 8px;
-    right: 8px;
-    font-family: sans-serif;
-    color: lightgray;
-}
-
-#info button {
-    border: 1px solid lightgray;
-    background: transparent;
-    font-family: inherit;
-    color: inherit;
-    cursor: pointer;
-}
-
-#info button:hover {
-    color: white;
-    border-color: white;
-}
-
-#info a {
-    color: inherit;
-    font-family: inherit;
-}
-
-#info a:hover {
-    color: white;
-}
-</style>
-<title>Lorenz Fun</title>
-<canvas id="canvas"></canvas>
-<div id="info">
-  <a href="https://github.com/toolness/lorenz-fun/#readme" target="_blank">About this experiment</a>
-  <button id="cfg_one">1</button>
-  <button id="cfg_two">2</button>
-  <button id="toggle_help">h</button>
-</div>
-<script src="./three.js"></script>
-<script>
-document.addEventListener('DOMContentLoaded', async () => {
-    const three = await Rust.three;
-    const initConfig = value => {
-        const success = three.init_config(value);
-        if (success !== true) {
-            console.log(`init_config(${value}) failed!`);
-        }
-    };
-
-    document.getElementById('cfg_one').onclick = () => initConfig(1);
-    document.getElementById('cfg_two').onclick = () => initConfig(2);
-    document.getElementById('toggle_help').onclick = () => three.toggle_help();
-});
-</script>
+<head>
+<meta http-equiv="refresh" content="0; URL=https://blog.hamstudy.org/2020/06/so-you-want-to-take-a-remote-exam/" />
+</head>
