Discord formatting magic

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<html prefix="og: http://ogp.me/ns#">
 <head>
 <meta http-equiv="refresh" content="0; URL=https://blog.hamstudy.org/2020/06/so-you-want-to-take-a-remote-exam/" />
+<meta content="So you want to take a remote exam…" property="og:title">
+<meta content="So you want to take a remote US Amateur Radio License Exam? Well, you’ve come to the right place. Since the lock-downs with COVID-19 started the world of Amateur Radio testing has nearly turned on its head, and the HamStudy.org team has been at the center of most of it!" property="og:description">
+<meta content="VECTools.xyz" property="og:site_name">
+<meta content='https://hamstudy.org/_e309209/images/hamstudy_ss_blue.png' property='og:image'>
 </head>
